--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "react-slick": "^0.29.0",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^15.4.4",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "react18-swipeable-views": "^0.15.0",
