--- a/package.json
+++ b/package.json
@@ -137,6 +137,8 @@
     "date-fns": "2.29.3",
     "downshift": "^1.31.12",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "express": "4.16.4",
@@ -146,6 +148,7 @@
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
+    "html-react-parser": "^5.0.7",
     "immer": "^9.0.6",
     "immutable": "3.8.2",
     "intl": "1.2.5",
