--- a/package.json
+++ b/package.json
@@ -137,8 +137,6 @@
     "date-fns": "2.29.3",
     "downshift": "^1.31.12",
     "draft-js": "^0.11.7",
-    "draft-js-export-html": "^1.4.1",
-    "draft-js-import-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "draftjs-to-markdown": "^0.6.0",
     "express": "4.16.4",
@@ -166,6 +164,7 @@
     "process": "^0.11.10",
     "prop-types": "15.7.2",
     "query-string": "^8.1.0",
+    "quill": "^1.3.7",
     "randomcolor": "^0.6.2",
     "raw-loader": "^4.0.2",
     "rcolor": "^1.0.1",
@@ -187,6 +186,7 @@
     "react-modal": "^3.16.1",
     "react-number-format": "^5.1.3",
     "react-popper": "^2.3.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.9",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.2.0",
