--- a/package.json
+++ b/package.json
@@ -216,7 +216,8 @@
     "url-loader": "^4.1.1",
     "warning": "4.0.2",
     "workbox-webpack-plugin": "^6.5.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "7.17.6",
