payroll reports: add branch (company) autocomplete & add default (month, year, company) select

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,13 @@
 {
+  "i18n-ally.localesPaths": [
+    "internals/generators/language"
+  ],
+  "cSpell.words": [
+    "datatables",
+    "idcard",
+    "isdelete",
+    "notif",
+    "Papper",
+    "Taysser"
+  ]
 }
