--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.10.17",
     "@mui/x-data-grid": "^6.6.0",
-    "@mui/x-date-pickers": "^5.0.15",
+    "@mui/x-date-pickers": "^6.19.4",
     "@popperjs/core": "^2.11.2",
     "@react-google-maps/api": "2.17.1",
     "acorn": "^6.4.2",
@@ -135,6 +135,7 @@
     "cross-env": "^5.2.1",
     "dandelion-animated-slider": "^1.0.0",
     "date-fns": "2.29.3",
+    "dayjs": "^1.11.10",
     "dotenv-webpack": "^8.0.1",
     "downshift": "^1.31.12",
     "draft-js": "^0.11.7",
