IMPROVE: Implement script to copy assets to build directory after build

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postinstall": "npm run build:dll",
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color --progress",
+    "postbuild": "shx cp -r public/* build",
     "build:clean": "rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
@@ -275,6 +276,7 @@
     "sass-loader": "^10.2.1",
     "sass-material-colors": "0.0.5",
     "shelljs": "^0.8.5",
+    "shx": "^0.3.4",
     "source-map-loader": "^1.1.3",
     "style-loader": "0.23.1",
     "stylelint": "^14.3.0",
