FEATURE:  setting - create startup "CertificateSetting" page

--- a/package.json
+++ b/package.json
@@ -150,11 +150,13 @@
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "html-react-parser": "^5.0.11",
+    "html2canvas": "^1.4.1",
     "immer": "^9.0.6",
     "immutable": "3.8.2",
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jspdf": "^2.5.1",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
     "keycode": "^2.2.0",
@@ -176,6 +178,7 @@
     "react-autosuggest": "^10.1.0",
     "react-calendar": "^2.17.4",
     "react-clock": "^2.3.0",
+    "react-color": "^2.19.3",
     "react-countup": "^6.1.1",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
