FEATURE: Survey - SurveyTemplate - create "SurveyTemplate" pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,6 @@
     "internals/generators/language"
   ],
   "cSpell.words": [
-    "datatables",
-    "idcard",
-    "isdelete",
-    "notif",
-    "orgchart",
-    "Papper",
-    "Taysser",
-    "todate"
+    "Taysser"
   ]
 }
