update text editor and add Survey Result report

--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "compression": "1.7.4",
     "connected-react18-router": "^6.9.4",
     "core-js": "^3.21.1",
-    "cross-env": "^5.2.1",
+    "cross-env": "^7.0.3",
     "dandelion-animated-slider": "^1.0.0",
     "date-fns": "2.29.3",
     "dayjs": "^1.11.10",
@@ -156,6 +156,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jodit-react": "^5.0.10",
     "jspdf": "^2.5.1",
     "jss": "^10.0.0",
     "jss-rtl": "^0.3.0",
