enhance build with DOMAIN_NAME, replace index.html with index.ejs, and add script to modify web.conf dynamically

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "npm run build:dll",
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color --progress",
-    "postbuild": "shx cp -r public/* build",
+    "postbuild": "shx cp -r public/* build && node ./internals/scripts/modify-web-config.js",
     "build:clean": "rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
@@ -137,6 +137,7 @@
     "dandelion-animated-slider": "^1.0.0",
     "date-fns": "2.29.3",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.0.1",
     "downshift": "^1.31.12",
     "draft-js": "^0.11.7",
