--- a/public/web.config
+++ b/public/web.config
@@ -9,7 +9,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/Novahr/index.html" />
+          <action type="Rewrite" url="__DOMAIN_NAME__/index.html" />
         </rule>
       </rules>
     </rewrite>
